// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SectionLabel When hideSectionHeader is true should add styling to hide SectionLabel for all breakpoints 1`] = `
.emotion-0 {
  margin: 0;
  padding: 0;
}

.emotion-2 {
  position: relative;
  z-index: 0;
  color: #3F3F42;
  margin-top: 2rem;
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
}

@media (min-width:37.5rem) {
  .emotion-2 {
    margin-top: 1.5rem;
  }
}

@media (min-width:63rem) {
  .emotion-2 {
    margin-bottom: 1.5rem;
  }
}

<div>
  <div
    class="emotion-2 emotion-3"
  >
    <h2
      class="emotion-0 emotion-1"
    >
      <span
        class="FlexColumn-wx5kdp-0 dgpsiS"
      >
        <span
          class="FlexRow-wx5kdp-2 dVBNyZ"
        >
          <span
            class="Title-wx5kdp-4 dfRrVv"
            dir="ltr"
            id="test-section-label"
          >
            This is the text in a SectionLabel
          </span>
        </span>
      </span>
    </h2>
  </div>
</div>
`;

exports[`SectionLabel With bar With linking title should render correctly 1`] = `
.emotion-4 {
  position: relative;
  z-index: 0;
  color: #3F3F42;
  margin-top: 2rem;
}

@media (min-width:37.5rem) {
  .emotion-4 {
    margin-top: 1.5rem;
  }
}

@media (min-width:63rem) {
  .emotion-4 {
    margin-bottom: 1.5rem;
  }
}

.emotion-0 {
  border-top: 0.0625rem solid #AEAEB5;
  z-index: -1;
}

@media screen and (-ms-high-contrast:active) {
  .emotion-0 {
    border-color: windowText;
  }
}

@media (min-width:37.5rem) {
  .emotion-0 {
    position: absolute;
    left: 0;
    right: 0;
    top: 1.375rem;
  }
}

.emotion-2 {
  margin: 0;
  padding: 0;
}

<div>
  <div
    class="emotion-4 emotion-5"
  >
    <div
      class="emotion-0 emotion-1"
    />
    <h2
      class="emotion-2 emotion-3"
    >
      <a
        aria-labelledby="test-section-label"
        class="SectionLabelLink-wx5kdp-1 hlUWNS"
        href="/igbo/other-index"
      >
        <span
          class="FlexColumn-wx5kdp-0 dgpsiS"
        >
          <span
            class="FlexRow-wx5kdp-2 FlexTextRow-wx5kdp-3 jvseIt"
            role="text"
          >
            <span
              class="Title-wx5kdp-4 dfRrVv"
              dir="ltr"
              id="test-section-label"
            >
              This is text in a linking SectionLabel.
            </span>
            <span
              aria-hidden="true"
              class="IndexLinkCta-wx5kdp-5 lnsJfj"
              dir="ltr"
            >
              See All
            </span>
          </span>
        </span>
      </a>
    </h2>
  </div>
</div>
`;

exports[`SectionLabel With bar With linking title should render correctly with arabic script typography values 1`] = `
.emotion-4 {
  position: relative;
  z-index: 0;
  color: #3F3F42;
  margin-top: 2rem;
}

@media (min-width:37.5rem) {
  .emotion-4 {
    margin-top: 1.5rem;
  }
}

@media (min-width:63rem) {
  .emotion-4 {
    margin-bottom: 1.5rem;
  }
}

.emotion-2 {
  margin: 0;
  padding: 0;
}

.emotion-0 {
  border-top: 0.0625rem solid #AEAEB5;
  z-index: -1;
}

@media screen and (-ms-high-contrast:active) {
  .emotion-0 {
    border-color: windowText;
  }
}

@media (min-width:37.5rem) {
  .emotion-0 {
    position: absolute;
    left: 0;
    right: 0;
    top: 1.625rem;
  }
}

<div>
  <div
    class="emotion-4 emotion-5"
  >
    <div
      class="emotion-0 emotion-1"
    />
    <h2
      class="emotion-2 emotion-3"
    >
      <a
        aria-labelledby="test-section-label"
        class="SectionLabelLink-wx5kdp-1 hlUWNS"
        href="/igbo/other-index"
      >
        <span
          class="FlexColumn-wx5kdp-0 dgpsiS"
        >
          <span
            class="FlexRow-wx5kdp-2 FlexTextRow-wx5kdp-3 jvseIt"
            role="text"
          >
            <span
              class="Title-wx5kdp-4 jJpioi"
              dir="rtl"
              id="test-section-label"
            >
              بعض محتوى النص
            </span>
            <span
              aria-hidden="true"
              class="IndexLinkCta-wx5kdp-5 gHULMu"
              dir="rtl"
            >
              See All
            </span>
          </span>
        </span>
      </a>
    </h2>
  </div>
</div>
`;

exports[`SectionLabel With bar With linking title should render correctly with explicit text direction 1`] = `
.emotion-4 {
  position: relative;
  z-index: 0;
  color: #3F3F42;
  margin-top: 2rem;
}

@media (min-width:37.5rem) {
  .emotion-4 {
    margin-top: 1.5rem;
  }
}

@media (min-width:63rem) {
  .emotion-4 {
    margin-bottom: 1.5rem;
  }
}

.emotion-0 {
  border-top: 0.0625rem solid #AEAEB5;
  z-index: -1;
}

@media screen and (-ms-high-contrast:active) {
  .emotion-0 {
    border-color: windowText;
  }
}

@media (min-width:37.5rem) {
  .emotion-0 {
    position: absolute;
    left: 0;
    right: 0;
    top: 1.375rem;
  }
}

.emotion-2 {
  margin: 0;
  padding: 0;
}

<div>
  <div
    class="emotion-4 emotion-5"
  >
    <div
      class="emotion-0 emotion-1"
    />
    <h2
      class="emotion-2 emotion-3"
    >
      <a
        aria-labelledby="test-section-label"
        class="SectionLabelLink-wx5kdp-1 hlUWNS"
        href="/igbo/other-index"
      >
        <span
          class="FlexColumn-wx5kdp-0 dgpsiS"
        >
          <span
            class="FlexRow-wx5kdp-2 FlexTextRow-wx5kdp-3 jvseIt"
            role="text"
          >
            <span
              class="Title-wx5kdp-4 dfRrVv"
              dir="ltr"
              id="test-section-label"
            >
              This is text in a SectionLabel rendering in ltr mode.
            </span>
            <span
              aria-hidden="true"
              class="IndexLinkCta-wx5kdp-5 lnsJfj"
              dir="ltr"
            >
              See All
            </span>
          </span>
        </span>
      </a>
    </h2>
  </div>
</div>
`;

exports[`SectionLabel With bar With linking title should render correctly with explicitly showing the bar 1`] = `
.emotion-4 {
  position: relative;
  z-index: 0;
  color: #3F3F42;
  margin-top: 2rem;
}

@media (min-width:37.5rem) {
  .emotion-4 {
    margin-top: 1.5rem;
  }
}

@media (min-width:63rem) {
  .emotion-4 {
    margin-bottom: 1.5rem;
  }
}

.emotion-0 {
  border-top: 0.0625rem solid #AEAEB5;
  z-index: -1;
}

@media screen and (-ms-high-contrast:active) {
  .emotion-0 {
    border-color: windowText;
  }
}

@media (min-width:37.5rem) {
  .emotion-0 {
    position: absolute;
    left: 0;
    right: 0;
    top: 1.375rem;
  }
}

.emotion-2 {
  margin: 0;
  padding: 0;
}

<div>
  <div
    class="emotion-4 emotion-5"
  >
    <div
      class="emotion-0 emotion-1"
    />
    <h2
      class="emotion-2 emotion-3"
    >
      <a
        aria-labelledby="test-section-label"
        class="SectionLabelLink-wx5kdp-1 hlUWNS"
        href="/igbo/other-index"
      >
        <span
          class="FlexColumn-wx5kdp-0 dgpsiS"
        >
          <span
            class="FlexRow-wx5kdp-2 FlexTextRow-wx5kdp-3 jvseIt"
            role="text"
          >
            <span
              class="Title-wx5kdp-4 dfRrVv"
              dir="ltr"
              id="test-section-label"
            >
              This is text in a SectionLabel, and there is a bar over to the right
            </span>
            <span
              aria-hidden="true"
              class="IndexLinkCta-wx5kdp-5 lnsJfj"
              dir="ltr"
            >
              See All
            </span>
          </span>
        </span>
      </a>
    </h2>
  </div>
</div>
`;

exports[`SectionLabel With bar With plain title should render correctly 1`] = `
.emotion-4 {
  position: relative;
  z-index: 0;
  color: #3F3F42;
  margin-top: 2rem;
}

@media (min-width:37.5rem) {
  .emotion-4 {
    margin-top: 1.5rem;
  }
}

@media (min-width:63rem) {
  .emotion-4 {
    margin-bottom: 1.5rem;
  }
}

.emotion-0 {
  border-top: 0.0625rem solid #AEAEB5;
  z-index: -1;
}

@media screen and (-ms-high-contrast:active) {
  .emotion-0 {
    border-color: windowText;
  }
}

@media (min-width:37.5rem) {
  .emotion-0 {
    position: absolute;
    left: 0;
    right: 0;
    top: 1.375rem;
  }
}

.emotion-2 {
  margin: 0;
  padding: 0;
}

<div>
  <div
    class="emotion-4 emotion-5"
  >
    <div
      class="emotion-0 emotion-1"
    />
    <h2
      class="emotion-2 emotion-3"
    >
      <span
        class="FlexColumn-wx5kdp-0 dgpsiS"
      >
        <span
          class="FlexRow-wx5kdp-2 dVBNyZ"
        >
          <span
            class="Title-wx5kdp-4 dfRrVv"
            dir="ltr"
            id="test-section-label"
          >
            This is text in a SectionLabel.
          </span>
        </span>
      </span>
    </h2>
  </div>
</div>
`;

exports[`SectionLabel With bar With plain title should render correctly with arabic script typography values 1`] = `
.emotion-4 {
  position: relative;
  z-index: 0;
  color: #3F3F42;
  margin-top: 2rem;
}

@media (min-width:37.5rem) {
  .emotion-4 {
    margin-top: 1.5rem;
  }
}

@media (min-width:63rem) {
  .emotion-4 {
    margin-bottom: 1.5rem;
  }
}

.emotion-2 {
  margin: 0;
  padding: 0;
}

.emotion-0 {
  border-top: 0.0625rem solid #AEAEB5;
  z-index: -1;
}

@media screen and (-ms-high-contrast:active) {
  .emotion-0 {
    border-color: windowText;
  }
}

@media (min-width:37.5rem) {
  .emotion-0 {
    position: absolute;
    left: 0;
    right: 0;
    top: 1.625rem;
  }
}

<div>
  <div
    class="emotion-4 emotion-5"
  >
    <div
      class="emotion-0 emotion-1"
    />
    <h2
      class="emotion-2 emotion-3"
    >
      <span
        class="FlexColumn-wx5kdp-0 dgpsiS"
      >
        <span
          class="FlexRow-wx5kdp-2 dVBNyZ"
        >
          <span
            class="Title-wx5kdp-4 jJpioi"
            dir="rtl"
            id="test-section-label"
          >
            بعض محتوى النص
          </span>
        </span>
      </span>
    </h2>
  </div>
</div>
`;

exports[`SectionLabel With bar With plain title should render correctly with explicit text direction 1`] = `
.emotion-4 {
  position: relative;
  z-index: 0;
  color: #3F3F42;
  margin-top: 2rem;
}

@media (min-width:37.5rem) {
  .emotion-4 {
    margin-top: 1.5rem;
  }
}

@media (min-width:63rem) {
  .emotion-4 {
    margin-bottom: 1.5rem;
  }
}

.emotion-0 {
  border-top: 0.0625rem solid #AEAEB5;
  z-index: -1;
}

@media screen and (-ms-high-contrast:active) {
  .emotion-0 {
    border-color: windowText;
  }
}

@media (min-width:37.5rem) {
  .emotion-0 {
    position: absolute;
    left: 0;
    right: 0;
    top: 1.375rem;
  }
}

.emotion-2 {
  margin: 0;
  padding: 0;
}

<div>
  <div
    class="emotion-4 emotion-5"
  >
    <div
      class="emotion-0 emotion-1"
    />
    <h2
      class="emotion-2 emotion-3"
    >
      <span
        class="FlexColumn-wx5kdp-0 dgpsiS"
      >
        <span
          class="FlexRow-wx5kdp-2 dVBNyZ"
        >
          <span
            class="Title-wx5kdp-4 dfRrVv"
            dir="ltr"
            id="test-section-label"
          >
            This is text in a SectionLabel rendering in ltr mode.
          </span>
        </span>
      </span>
    </h2>
  </div>
</div>
`;

exports[`SectionLabel With bar With plain title should render correctly with explicitly showing the bar 1`] = `
.emotion-4 {
  position: relative;
  z-index: 0;
  color: #3F3F42;
  margin-top: 2rem;
}

@media (min-width:37.5rem) {
  .emotion-4 {
    margin-top: 1.5rem;
  }
}

@media (min-width:63rem) {
  .emotion-4 {
    margin-bottom: 1.5rem;
  }
}

.emotion-0 {
  border-top: 0.0625rem solid #AEAEB5;
  z-index: -1;
}

@media screen and (-ms-high-contrast:active) {
  .emotion-0 {
    border-color: windowText;
  }
}

@media (min-width:37.5rem) {
  .emotion-0 {
    position: absolute;
    left: 0;
    right: 0;
    top: 1.375rem;
  }
}

.emotion-2 {
  margin: 0;
  padding: 0;
}

<div>
  <div
    class="emotion-4 emotion-5"
  >
    <div
      class="emotion-0 emotion-1"
    />
    <h2
      class="emotion-2 emotion-3"
    >
      <span
        class="FlexColumn-wx5kdp-0 dgpsiS"
      >
        <span
          class="FlexRow-wx5kdp-2 dVBNyZ"
        >
          <span
            class="Title-wx5kdp-4 dfRrVv"
            dir="ltr"
            id="test-section-label"
          >
            This is text in a SectionLabel, and there is a bar over to the right
          </span>
        </span>
      </span>
    </h2>
  </div>
</div>
`;

exports[`SectionLabel With heading overriden should render a strong element instead of an h2 1`] = `
.emotion-2 {
  position: relative;
  z-index: 0;
  color: #3F3F42;
  margin-top: 2rem;
}

@media (min-width:37.5rem) {
  .emotion-2 {
    margin-top: 1.5rem;
  }
}

@media (min-width:63rem) {
  .emotion-2 {
    margin-bottom: 1.5rem;
  }
}

.emotion-0 {
  margin: 0;
  padding: 0;
}

<div>
  <div
    class="emotion-2 emotion-3"
  >
    <strong
      class="emotion-0 emotion-1"
    >
      <span
        class="FlexColumn-wx5kdp-0 dgpsiS"
      >
        <span
          class="FlexRow-wx5kdp-2 dVBNyZ"
        >
          <span
            class="Title-wx5kdp-4 dfRrVv"
            dir="ltr"
            id="test-section-label"
          >
            This is text in a SectionLabel.
          </span>
        </span>
      </span>
    </strong>
  </div>
</div>
`;

exports[`SectionLabel Without bar With linking title should render correctly 1`] = `
.emotion-2 {
  position: relative;
  z-index: 0;
  color: #3F3F42;
  margin-top: 2rem;
}

@media (min-width:37.5rem) {
  .emotion-2 {
    margin-top: 1.5rem;
  }
}

@media (min-width:63rem) {
  .emotion-2 {
    margin-bottom: 1.5rem;
  }
}

.emotion-0 {
  margin: 0;
  padding: 0;
}

<div>
  <div
    class="emotion-2 emotion-3"
  >
    <h2
      class="emotion-0 emotion-1"
    >
      <a
        aria-labelledby="test-section-label"
        class="SectionLabelLink-wx5kdp-1 hlUWNS"
        href="/igbo/other-index"
      >
        <span
          class="FlexColumn-wx5kdp-0 dgpsiS"
        >
          <span
            class="FlexRow-wx5kdp-2 FlexTextRow-wx5kdp-3 jvseIt"
            role="text"
          >
            <span
              class="Title-wx5kdp-4 dfRrVv"
              dir="ltr"
              id="test-section-label"
            >
              This is text in a SectionLabel.
            </span>
            <span
              aria-hidden="true"
              class="IndexLinkCta-wx5kdp-5 lnsJfj"
              dir="ltr"
            >
              See All
            </span>
          </span>
        </span>
      </a>
    </h2>
  </div>
</div>
`;

exports[`SectionLabel Without bar With linking title should render correctly with arabic script typography values 1`] = `
.emotion-2 {
  position: relative;
  z-index: 0;
  color: #3F3F42;
  margin-top: 2rem;
}

@media (min-width:37.5rem) {
  .emotion-2 {
    margin-top: 1.5rem;
  }
}

@media (min-width:63rem) {
  .emotion-2 {
    margin-bottom: 1.5rem;
  }
}

.emotion-0 {
  margin: 0;
  padding: 0;
}

<div>
  <div
    class="emotion-2 emotion-3"
  >
    <h2
      class="emotion-0 emotion-1"
    >
      <a
        aria-labelledby="test-section-label"
        class="SectionLabelLink-wx5kdp-1 hlUWNS"
        href="/igbo/other-index"
      >
        <span
          class="FlexColumn-wx5kdp-0 dgpsiS"
        >
          <span
            class="FlexRow-wx5kdp-2 FlexTextRow-wx5kdp-3 jvseIt"
            role="text"
          >
            <span
              class="Title-wx5kdp-4 jJpioi"
              dir="rtl"
              id="test-section-label"
            >
              بعض محتوى النص
            </span>
            <span
              aria-hidden="true"
              class="IndexLinkCta-wx5kdp-5 gHULMu"
              dir="rtl"
            >
              See All
            </span>
          </span>
        </span>
      </a>
    </h2>
  </div>
</div>
`;

exports[`SectionLabel Without bar With linking title should render correctly with explicit text direction 1`] = `
.emotion-2 {
  position: relative;
  z-index: 0;
  color: #3F3F42;
  margin-top: 2rem;
}

@media (min-width:37.5rem) {
  .emotion-2 {
    margin-top: 1.5rem;
  }
}

@media (min-width:63rem) {
  .emotion-2 {
    margin-bottom: 1.5rem;
  }
}

.emotion-0 {
  margin: 0;
  padding: 0;
}

<div>
  <div
    class="emotion-2 emotion-3"
  >
    <h2
      class="emotion-0 emotion-1"
    >
      <a
        aria-labelledby="test-section-label"
        class="SectionLabelLink-wx5kdp-1 hlUWNS"
        href="/igbo/other-index"
      >
        <span
          class="FlexColumn-wx5kdp-0 dgpsiS"
        >
          <span
            class="FlexRow-wx5kdp-2 FlexTextRow-wx5kdp-3 jvseIt"
            role="text"
          >
            <span
              class="Title-wx5kdp-4 dfRrVv"
              dir="ltr"
              id="test-section-label"
            >
              This is text in a SectionLabel rendering in ltr mode.
            </span>
            <span
              aria-hidden="true"
              class="IndexLinkCta-wx5kdp-5 lnsJfj"
              dir="ltr"
            >
              See All
            </span>
          </span>
        </span>
      </a>
    </h2>
  </div>
</div>
`;

exports[`SectionLabel Without bar With plain title should render correctly 1`] = `
.emotion-2 {
  position: relative;
  z-index: 0;
  color: #3F3F42;
  margin-top: 2rem;
}

@media (min-width:37.5rem) {
  .emotion-2 {
    margin-top: 1.5rem;
  }
}

@media (min-width:63rem) {
  .emotion-2 {
    margin-bottom: 1.5rem;
  }
}

.emotion-0 {
  margin: 0;
  padding: 0;
}

<div>
  <div
    class="emotion-2 emotion-3"
  >
    <h2
      class="emotion-0 emotion-1"
    >
      <span
        class="FlexColumn-wx5kdp-0 dgpsiS"
      >
        <span
          class="FlexRow-wx5kdp-2 dVBNyZ"
        >
          <span
            class="Title-wx5kdp-4 dfRrVv"
            dir="ltr"
            id="test-section-label"
          >
            This is text in a SectionLabel.
          </span>
        </span>
      </span>
    </h2>
  </div>
</div>
`;

exports[`SectionLabel Without bar With plain title should render correctly with arabic script typography values 1`] = `
.emotion-2 {
  position: relative;
  z-index: 0;
  color: #3F3F42;
  margin-top: 2rem;
}

@media (min-width:37.5rem) {
  .emotion-2 {
    margin-top: 1.5rem;
  }
}

@media (min-width:63rem) {
  .emotion-2 {
    margin-bottom: 1.5rem;
  }
}

.emotion-0 {
  margin: 0;
  padding: 0;
}

<div>
  <div
    class="emotion-2 emotion-3"
  >
    <h2
      class="emotion-0 emotion-1"
    >
      <span
        class="FlexColumn-wx5kdp-0 dgpsiS"
      >
        <span
          class="FlexRow-wx5kdp-2 dVBNyZ"
        >
          <span
            class="Title-wx5kdp-4 jJpioi"
            dir="rtl"
            id="test-section-label"
          >
            بعض محتوى النص
          </span>
        </span>
      </span>
    </h2>
  </div>
</div>
`;

exports[`SectionLabel Without bar With plain title should render correctly with explicit text direction 1`] = `
.emotion-2 {
  position: relative;
  z-index: 0;
  color: #3F3F42;
  margin-top: 2rem;
}

@media (min-width:37.5rem) {
  .emotion-2 {
    margin-top: 1.5rem;
  }
}

@media (min-width:63rem) {
  .emotion-2 {
    margin-bottom: 1.5rem;
  }
}

.emotion-0 {
  margin: 0;
  padding: 0;
}

<div>
  <div
    class="emotion-2 emotion-3"
  >
    <h2
      class="emotion-0 emotion-1"
    >
      <span
        class="FlexColumn-wx5kdp-0 dgpsiS"
      >
        <span
          class="FlexRow-wx5kdp-2 dVBNyZ"
        >
          <span
            class="Title-wx5kdp-4 dfRrVv"
            dir="ltr"
            id="test-section-label"
          >
            This is text in a SectionLabel rendering in ltr mode.
          </span>
        </span>
      </span>
    </h2>
  </div>
</div>
`;
